# CSIRO-Image2Biomass-Prediction

./: .gitignore  README.md  csiro-subm.ipynb  pyproject.toml
notebooks/: 0-69-ensemble-3-models-embeddings.ipynb  2-head-inference.ipynb  ConvNeXt.ipynb  ImprovedCNN-Training.ipynb  ckpt2pt.ipynb  csiro-train-final-notebook-copy1-3.ipynb  csiro-train-final-notebook.ipynb  dinov2-try.ipynb  distillation_inference.ipynb  distillation_student.ipynb  distillation_teacher.ipynb  distillation_teacher_new.ipynb  inference.ipynb  kaggle_inference.ipynb  model_validation.ipynb  notebookbe8ca2ce14.ipynb  notebookef2f34880a-2.ipynb  notebooks_config.py  siglip-gradientboosting-pca-trick.ipynb  сsiro-inference.ipynb
notebooks/kaggle/input/: train_with_oof_soft_targets.csv  train_with_soft_targets.csv
src/: BiomassConvNeXt.py  BiomassDINOv3.py  BiomassDataset.py  BiomassImprovedCNN.py  BiomassTransformer.py  CNNWrapper.py  CrossViewAttention.py  DINOv3Wrapper.py  MultiScalePooling.py  RegressionHead.py  SpatialAttention.py  TransformerWrapper.py  cv.py  dataloaders.py  image_transforms.py
