[project]
name = "Image2Biomass"
version = "0.1.0"
description = "Project for kaggle competition Image2Biomass"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.22",
    "torchvision>=0.24.1",
    "pytorch-lightning>=2.6.0",
    "tqdm>=4.67.1",
    "hf-xet>=1.2.0",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    "nbformat>=5.10.4",
    "pillow>=12.0.0",
]

# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-environment-markers
[project.optional-dependencies]
cpu = [
  "torch>=2.9.0",
]
gpu = [
  "torch>=2.9.0",
]

# uv sync --extra gpu
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
